@@ -227,7 +227,7 @@ Starting code units: \x09 \x0a \x0b \x0c \x0d \x20 a b
 Subject length lower bound = 1
 
 /(ab\2)/
-Failed: error 115 at offset 6: reference to non-existent subpattern
+Failed: error 115 at offset 4: reference to non-existent subpattern
 
 /{4,5}abc/
 Failed: error 109 at offset 4: quantifier does not follow a repeatable item
@@ -327,7 +327,7 @@ No match
 No match
 
 /(a)(b)(c)(d)(e)\6/
-Failed: error 115 at offset 17: reference to non-existent subpattern
+Failed: error 115 at offset 16: reference to non-existent subpattern
 
 /the quick brown fox/I
 Capturing subpattern count = 0
@@ -901,13 +901,13 @@ Failed: error 109 at offset 2: quantifier does not follow a repeatable item
 Failed: error 122 at offset 0: unmatched closing parenthesis
 
 /\1/
-Failed: error 115 at offset 2: reference to non-existent subpattern
+Failed: error 115 at offset 1: reference to non-existent subpattern
 
 /\2/
-Failed: error 115 at offset 2: reference to non-existent subpattern
+Failed: error 115 at offset 1: reference to non-existent subpattern
 
 /(a)|\2/
-Failed: error 115 at offset 6: reference to non-existent subpattern
+Failed: error 115 at offset 5: reference to non-existent subpattern
 
 /a[b-a]/Ii
 Failed: error 108 at offset 4: range out of order in character class
@@ -8628,10 +8628,10 @@ Failed: error 162 at offset 3: subpattern name expected
 Failed: error 162 at offset 3: subpattern name expected
 
 /\k/
-Failed: error 169 at offset 2: \k is not followed by a braced, angle-bracketed, or quoted name
+Failed: error 169 at offset 1: \k is not followed by a braced, angle-bracketed, or quoted name
 
 /\kabc/
-Failed: error 169 at offset 5: \k is not followed by a braced, angle-bracketed, or quoted name
+Failed: error 169 at offset 1: \k is not followed by a braced, angle-bracketed, or quoted name
 
 /(?P=)/
 Failed: error 162 at offset 4: subpattern name expected
@@ -8667,7 +8667,7 @@ Failed: error 130 at offset 6: unknown POSIX class name
 Failed: error 130 at offset 3: unknown POSIX class name
 
 /(^(a|b\g<-1'c))/
-Failed: error 157 at offset 15: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
+Failed: error 157 at offset 8: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
 
 /^(?+1)(?<a>x|y){0}z/
     xzxx
@@ -13320,10 +13320,10 @@ Failed: error 144 at offset 13: group name must start with a non-digit
 Failed: error 144 at offset 14: group name must start with a non-digit
 
 /\g'3gh'/
-Failed: error 157 at offset 7: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
+Failed: error 157 at offset 2: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
 
 /\g<5fg>/
-Failed: error 157 at offset 7: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
+Failed: error 157 at offset 2: \g is not followed by a braced, angle-bracketed, or quoted name/number or by a plain number
 
 /(?(<4gh>)abc)/
 Failed: error 144 at offset 4: group name must start with a non-digit
@@ -13455,10 +13455,10 @@ Failed: error 178 at offset 3: digits missing in \x{} or \o{}
 Failed: error 167 at offset 3: non-hex character in \x{} (closing brace missing?)
 
 /A\8B/
-Failed: error 115 at offset 4: reference to non-existent subpattern
+Failed: error 115 at offset 2: reference to non-existent subpattern
 
 /A\9B/
-Failed: error 115 at offset 4: reference to non-existent subpattern
+Failed: error 115 at offset 2: reference to non-existent subpattern
 
 # This one is here because Perl fails to match "12" for this pattern when the $ 
 # is present.
@@ -14313,7 +14313,7 @@ No match
  0: 
 
 /((((((((x))))))))\81/
-Failed: error 115 at offset 20: reference to non-existent subpattern
+Failed: error 115 at offset 19: reference to non-existent subpattern
     xx1
 
 /((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((x))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))\80/
@@ -14336,10 +14336,10 @@ Matched, but too many substrings
 14: x
 
 /\80/
-Failed: error 115 at offset 3: reference to non-existent subpattern
+Failed: error 115 at offset 2: reference to non-existent subpattern
 
 /A\8B\9C/
-Failed: error 115 at offset 7: reference to non-existent subpattern
+Failed: error 115 at offset 2: reference to non-existent subpattern
     A8B9C
     
 /(?x:((?'a')) # comment (with parentheses) and | vertical
@@ -14422,10 +14422,10 @@ Subject length lower bound = 1
 ------------------------------------------------------------------
 
 /(\9*+(?2);\3++()2|)++{/
-Failed: error 115 at offset 22: reference to non-existent subpattern
+Failed: error 115 at offset 2: reference to non-existent subpattern
 
 /\V\x85\9*+((?2)\3++()2)*:2/
-Failed: error 115 at offset 26: reference to non-existent subpattern
+Failed: error 115 at offset 7: reference to non-existent subpattern
 
 /(((?(R)){0,2}) (?'x'((?'R')((?'R')))))/dupnames
 
@@ -14647,5 +14647,8 @@ Failed: error 161 at offset 16: number is too big
 /0(?0)|(1)(*THEN)(*SKIP:0)(*FAIL)/
     01
 No match
+
+/(?(1)()\983040\2)/
+Failed: error 115 at offset 13: reference to non-existent subpattern
 
 # End of testinput2 
